# x264_lib

./: CMakeLists.txt  README.md  types.h
adapter/: x264_adapter.cpp  x264_adapter.h
h264lib_x264/: h264_encoder.cpp  h264lib.h  x264_155.h
src/: CMakeLists.txt  build_android.sh  build_android_arm.sh  build_android_arm64.sh  build_android_x86.sh  build_x264.bat  config.h  config.mak  install.sh  libx264.155.dylib  x264  x264.h  x264.pc
src/common/: common.h
src/encoder/: api.c
